fullSandbox11072023/force-app/main/default/objects/Story__c/Story__c.object-meta.xml
<CustomObject>
    <label>Story</label>
    <nameField>
        <displayFormat>STORY{00000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>