fullSandbox11072023/force-app/main/default/objects/Story__c/fields/Age_Days__c.field-meta.xml
<CustomField>
    <fullName>Age_Days__c</fullName>
    <formula>TODAY() - DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>