fullSandbox11072023/force-app/main/default/objects/Story__c/fields/As_a__c.field-meta.xml
<CustomField>
    <fullName>As_a__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Roles are defined in the &quot;Roles&quot; tab at the top. If you cannot find one, please check that tab and add one if necessary.</inlineHelpText>
    <label>As a</label>
    <referenceTo>Role__c</referenceTo>
    <relationshipLabel>Stories</relationshipLabel>
    <relationshipName>Stories</relationshipName>
    <type>Lookup</type>
</CustomField>