fullSandbox11072023/force-app/main/default/objects/Story__c/fields/Customer_Committed_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Committed_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Committed Date</label>
    <type>Checkbox</type>
</CustomField>