fullSandbox11072023/force-app/main/default/objects/Story__c/fields/Customer_Owns_Next_Action__c.field-meta.xml
<CustomField>
    <fullName>Customer_Owns_Next_Action__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Owns Next Action</label>
    <type>Checkbox</type>
</CustomField>