fullSandbox11072023/force-app/main/default/objects/Story__c/fields/Days_Until_Due__c.field-meta.xml
<CustomField>
    <fullName>Days_Until_Due__c</fullName>
    <formula>Requested_Date__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Until Due</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>