fullSandbox11072023/force-app/main/default/objects/Story__c/fields/I_want_to__c.field-meta.xml
<CustomField>
    <fullName>I_want_to__c</fullName>
    <label>I want to</label>
    <type>TextArea</type>
</CustomField>