fullSandbox11072023/force-app/main/default/objects/Story__c/fields/LOB__c.field-meta.xml
<CustomField>
    <fullName>LOB__c</fullName>
    <inlineHelpText>Line of Business / Department</inlineHelpText>
    <label>Functional Area</label>
    <length>64</length>
    <type>Text</type>
</CustomField>