fullSandbox11072023/force-app/main/default/objects/Story__c/fields/Primary_Bucket__c.field-meta.xml
<CustomField>
    <fullName>Primary_Bucket__c</fullName>
    <label>Primary Bucket</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>L4 – New functionality</fullName>
            </value>
            <value>
                <fullName>L4 – Sales leadership sponsorship</fullName>
            </value>
            <value>
                <fullName>L4 – UX/Simplify+Train</fullName>
            </value>
            <value>
                <fullName>L4 – Data integration</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>