fullSandbox11072023/force-app/main/default/objects/Story__c/fields/Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Date__c</fullName>
    <label>Committed Date</label>
    <type>Date</type>
</CustomField>