fullSandbox11072023/force-app/main/default/objects/Story__c/fields/So_that__c.field-meta.xml
<CustomField>
    <fullName>So_that__c</fullName>
    <label>So that</label>
    <type>TextArea</type>
</CustomField>