fullSandbox11072023/force-app/main/default/objects/Story__c/fields/SprintText__c.field-meta.xml
<CustomField>
    <fullName>SprintText__c</fullName>
    <formula>Sprint__r.Name</formula>
    <label>SprintText</label>
    <type>Text</type>
</CustomField>