fullSandbox11072023/force-app/main/default/objects/Story__c/fields/Tasks_Not_Done__c.field-meta.xml
<CustomField>
    <fullName>Tasks_Not_Done__c</fullName>
    <label>Tasks Not Done</label>
    <summaryFilterItems>
        <field>Element__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Task</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Element__c.Status__c</field>
        <operation>equals</operation>
        <value>Not Started, In Progress</value>
    </summaryFilterItems>
    <summaryForeignKey>Element__c.User_Story__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>