fullSandbox11072023/force-app/main/default/objects/Story__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Feature</fullName>
                <default>true</default>
                <label>Feature</label>
            </value>
            <value>
                <fullName>Chore</fullName>
            </value>
            <value>
                <fullName>Bug</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>