fullSandbox11072023/force-app/main/default/objects/Story__c/fields/User_Story__c.field-meta.xml
<CustomField>
    <fullName>User_Story__c</fullName>
    <formula>&quot;As a &quot; &amp; As_a__r.Name &amp; &quot; I want to &quot; &amp; I_want_to__c &amp; &quot; so that &quot; &amp; So_that__c</formula>
    <label>Story</label>
    <type>Text</type>
</CustomField>