fullSandbox11072023/force-app/main/default/objects/Story__c/validationRules/Active_User_Story_Must_Have_Sprint.validationRule-meta.xml
<ValidationRule>
    <fullName>Active_User_Story_Must_Have_Sprint</fullName>
    <active>true</active>
    <description>Story with Status=In Sprint must have Sprint field populated.</description>
    <errorConditionFormula>ISPICKVAL(Status__c , &quot;In Sprint&quot;) 
&amp;&amp; 
ISBLANK(Sprint__c)</errorConditionFormula>
    <errorDisplayField>Sprint__c</errorDisplayField>
    <errorMessage>You MUST select a Sprint to indicate this as a Story with Status of In Sprint</errorMessage>
</ValidationRule>