fullSandbox11072023/force-app/main/default/objects/Story__c/validationRules/CompleteUsrStory_canthave_TestsNotPassed.validationRule-meta.xml
<ValidationRule>
    <fullName>CompleteUsrStory_canthave_TestsNotPassed</fullName>
    <active>true</active>
    <description>Story with Status=Complete must not have any TESTS with Status that does not equal Passed (or Canceled)</description>
    <errorConditionFormula>ISPICKVAL(Status__c, &quot;Complete&quot;) 
&amp;&amp; 
Tests_Not_Validated__c &gt; 0</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>You can not tag this Story as Complete until all related TESTS have Passed.</errorMessage>
</ValidationRule>