fullSandbox11072023/force-app/main/default/objects/Story__c/validationRules/User_Story_w_Sprint_no_Product_Backlog.validationRule-meta.xml
<ValidationRule>
    <fullName>User_Story_w_Sprint_no_Product_Backlog</fullName>
    <active>true</active>
    <description>Story with Sprint field populated must have Status=In Sprint, Complete, or Canceled (not Product Backlog)</description>
    <errorConditionFormula>NOT(ISBLANK(Sprint__c))
&amp;&amp;
ISPICKVAL(Status__c , &quot;Product Backlog&quot;)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>You MUST either select a different Status OR clear the Sprint from this Story. A Story that is in the Product Backlog can not also be part of a Sprint.</errorMessage>
</ValidationRule>