fullSandbox11072023/force-app/main/default/objects/Story__c/listViews/All_Initiatives_All_Stories.listView-meta.xml
<ListView>
    <fullName>All_Initiatives_All_Stories</fullName>
    <columns>NAME</columns>
    <columns>Nickname__c</columns>
    <columns>SBU__c</columns>
    <columns>Status__c</columns>
    <columns>Requested_Date__c</columns>
    <columns>Origin__c</columns>
    <columns>Owner__c</columns>
    <columns>Sprint__c</columns>
    <columns>Project__c</columns>
    <columns>Tasks_Not_Done__c</columns>
    <columns>Prioritization_Score__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Initiatives - All Stories</label>
    <language>en_US</language>
</ListView>