fullSandbox11072023/force-app/main/default/objects/Story__c/listViews/All_open_stories_no_owner.listView-meta.xml
<ListView>
    <fullName>All_open_stories_no_owner</fullName>
    <columns>NAME</columns>
    <columns>User_Story__c</columns>
    <columns>Owner__c</columns>
    <columns>Status__c</columns>
    <columns>Requested_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Type__c</columns>
    <columns>Sprint__c</columns>
    <columns>Project__c</columns>
    <columns>Tasks_Not_Done__c</columns>
    <columns>Prioritization_Score__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Product Backlog</value>
    </filters>
    <filters>
        <field>Owner__c</field>
        <operation>equals</operation>
    </filters>
    <label>All open stories no owner</label>
    <language>en_US</language>
</ListView>