fullSandbox11072023/force-app/main/default/objects/Story__c/listViews/All_Projects_2_Stories_in_Sprint.listView-meta.xml
<ListView>
    <fullName>All_Projects_2_Stories_in_Sprint</fullName>
    <columns>NAME</columns>
    <columns>Nickname__c</columns>
    <columns>SBU__c</columns>
    <columns>Status__c</columns>
    <columns>Requested_Date__c</columns>
    <columns>Type__c</columns>
    <columns>Owner__c</columns>
    <columns>Sprint__c</columns>
    <columns>Project__c</columns>
    <columns>Tasks_Not_Done__c</columns>
    <columns>Prioritization_Score__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>In Sprint</value>
    </filters>
    <label>All Initiatives - 2. Stories in Sprint</label>
    <language>en_US</language>
</ListView>