fullSandbox11072023/force-app/main/default/objects/Story__c/listViews/All_Projects_3_Stories_Completed.listView-meta.xml
<ListView>
    <fullName>All_Projects_3_Stories_Completed</fullName>
    <columns>NAME</columns>
    <columns>Nickname__c</columns>
    <columns>SBU__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>Owner__c</columns>
    <columns>Sprint__c</columns>
    <columns>Project__c</columns>
    <columns>Prioritization_Score__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Complete</value>
    </filters>
    <label>All Initiatives - 3. Stories Completed</label>
    <language>en_US</language>
</ListView>