fullSandbox11072023/force-app/main/default/objects/Story__c/listViews/My_Stories_All.listView-meta.xml
<ListView>
    <fullName>My_Stories_All</fullName>
    <columns>NAME</columns>
    <columns>Nickname__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>SBU__c</columns>
    <columns>User_Story__c</columns>
    <columns>LOB__c</columns>
    <columns>Status__c</columns>
    <columns>Requested_Date__c</columns>
    <columns>Primary_Bucket__c</columns>
    <columns>Sprint__c</columns>
    <columns>Project__c</columns>
    <columns>Tasks_Not_Done__c</columns>
    <columns>Prioritization_Score__c</columns>
    <columns>Customer_Committed_Date__c</columns>
    <columns>Customer_Owns_Next_Action__c</columns>
    <filterScope>Everything</filterScope>
    <label>My Stories All</label>
</ListView>