fullSandbox11072023/force-app/main/default/objects/Story__c/listViews/My_Stories_Open.listView-meta.xml
<ListView>
    <fullName>My_Stories_Open</fullName>
    <columns>NAME</columns>
    <columns>Nickname__c</columns>
    <columns>SBU__c</columns>
    <columns>Status__c</columns>
    <columns>Requested_Date__c</columns>
    <columns>Sprint__c</columns>
    <columns>Project__c</columns>
    <columns>Tasks_Not_Done__c</columns>
    <columns>Prioritization_Score__c</columns>
    <columns>LOB__c</columns>
    <columns>Owner__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Product Backlog,In Sprint</value>
    </filters>
    <filters>
        <field>IsOwner__c</field>
        <operation>equals</operation>
        <value>true</value>
    </filters>
    <label>My Stories Open</label>
    <language>en_US</language>
</ListView>