fullSandbox11072023/force-app/main/default/objects/Story__c/listViews/My_Stories_this_Sprint.listView-meta.xml
<ListView>
    <fullName>My_Stories_this_Sprint</fullName>
    <columns>NAME</columns>
    <columns>Nickname__c</columns>
    <columns>SBU__c</columns>
    <columns>Project__c</columns>
    <columns>Status__c</columns>
    <columns>Requested_Date__c</columns>
    <columns>Tasks_Not_Done__c</columns>
    <columns>Prioritization_Score__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sprint__c</field>
        <operation>equals</operation>
        <value>Lemming</value>
    </filters>
    <filters>
        <field>IsOwner__c</field>
        <operation>equals</operation>
        <value>true</value>
    </filters>
    <label>My Stories this Sprint</label>
    <language>en_US</language>
</ListView>